# plateai

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build.yml
examples/: sample.csv
plateai/: __init__.py  alphabets.py  cli.py  dataset.py  export.py  model.py  train.py
tools/: README.md  analyze_bench_errors.py  autotune.env.example  bench_platex_csv.py  build_confusion_subset.py  build_train_mix.py  check_baseline_files.sh  check_ckpt.py  filter_nev_csv.py  iter_train_platex_loop.sh  merge_modd_csv.py  notify_webhook.py  plateai_train_docker.sh  remote_start_autotune_env.sh  restore_optimal_we.sh  sample_training_pool.py  start_autotune.sh  sync_tools.sh  train_confusion_gate.sh  train_nev_err_mix.sh
